# json-spike

./: aie5demo.db  example_code.py  main.py  pyproject.toml  validate_submission.py
database/: clean_db_eng.py  context_deid.py  context_grouping.py  context_staging.py  context_submission.py  context_warehouse.py  deid_eng.py  enums.py  med_eng.py  reset_demo_sql.py  staging_eng.py  staging_rule_eng.py  submission_context.py  submissions_eng.py  submissions_interface.py  warehouse_eng.py
database/migrations/deid/: flyway.conf
database/migrations/groupings/: flyway.conf
database/migrations/staging/: flyway.conf
database/models/: deid.py  grouping.py  staging.py  submission.opy  submission.py  submissions.py  warehouse.py
db/: base.py  context.py
files/archive/: dirk_202501.xml  ghost_202303.xml  qbert_202401.xml
files/quarantine/: claw.xml  ghost_202304.xml
files/xsd/: aie5.xsd
grafana_dashboards/: submissions.json
landing/: submissions.xml
landing/submissions/: ghost.xml
llm_eval/: eval.py  pyproject.toml  ragas_results_deepseek-r1.txt  ragas_results_openai_4o.json  test_results_openai_4o.csv
llms/: llm_deid.py  llm_med.py
metrics/: pushgateway.py
migrations/submissions/: TestSQLite.java  flyway.config  submission_queue.db
models/: edvisit.py  submission.py  submissions.py
pipeline_utils/: file_pipeline.py  hashing.py  reset_files.py  sleep_pipeline.py  xml_pipeline.py
processes/: intake.py  workflow1.py  workflow2.py  workflow3.py  workflow4.py  workflow5.py
utils/: hashing.py
xsd/: aie5.xsd
(+19 files in other folders)
