[project]
name = "json-spike"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.3.19",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.11",
    "lxml>=5.3.1",
    "prometheus-client>=0.21.1",
    "pyodbc>=5.2.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy",
]
